Se agrego mas pruebas y se elimino cosas en base a lo que nos recomendo sonnar